--- a/Account.html
+++ b/Account.html
@@ -116,12 +116,27 @@
     <div class="col-sm-3"></div>
 
     <!-- <div class="userAccount">User info</div> -->
-
-    <footer class="footer navbar-fixed-bottom">
-      <p>
-        Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        HoliStayie@gmail.com
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-content-brand">
+            <a href="indexTest.html" class="logo">
+              <img class="logo-image" src="./images/Logo.png" alt="">
+            </a> 
+            <div class="paragraph-footer"> 
+              test test test test test test test test test test test test
+            </div>
+          </div>
+          <div class="socialmedia-wrap">
+            <h4 class="footer-heading">Follow us</h4>
+              <div class="socialmedia">
+                <a href="#" class="sm-link"> <i class="fab fa-facebook-square"></i> </a>
+                <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+                <a href="#" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
+              </div>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="js/account.js"></script>
