--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -80,8 +80,30 @@
         Stay: Armagh city hotel
         Price: £99 per night
         </p>>
-
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-content-brand">
+            <a href="indexTest.html" class="logo">
+              <img class="logo-image" src="./images/Logo.png" alt="">
+            </a> 
+            <div class="paragraph-footer"> 
+              test test test test test test test test test test test test
+            </div>
+          </div>
+          <div class="socialmedia-wrap">
+            <h4 class="footer-heading">Follow us</h4>
+              <div class="socialmedia">
+                <a href="#" class="sm-link"> <i class="fab fa-facebook-square"></i> </a>
+                <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+                <a href="#" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
+              </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/featuredstays.js"></script>
   </body>
 </html>
