--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -40,12 +40,32 @@
 
     <section id="anything" class="row" col="col-8 tile-body"></section>
 
-    <div class="footer">
-      <p>
-        Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        HoliStayie@gmail.com
-      </p>
-    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-content-brand">
+            <a href="indexTest.html" class="logo">
+              <img class="logo-image" src="./images/Logo.png" alt="" />
+            </a>
+            <div class="paragraph-footer">
+              test test test test test test test test test test test test
+            </div>
+          </div>
+          <div class="socialmedia-wrap">
+            <h4 class="footer-heading">Follow us</h4>
+            <div class="socialmedia">
+              <a href="#" class="sm-link">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+              <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+              <a href="#" class="sm-link">
+                <i class="fab fa-tripadvisor"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/findyourstay.js"></script>
   </body>
 </html>
