--- a/StayStyles.html
+++ b/StayStyles.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="./css/staystyles.css" />
-  <title>Holistay IE</title>
-
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/staystyles.css" />
+    <title>Holistay IE</title>
   </head>
 
   <body>
@@ -18,7 +19,7 @@
       <div class="container">
         <nav class="nav">
           <a href="index.html" class="logo">
-            <img src="./Images/Logo.png" alt=""> 
+            <img src="./Images/Logo.png" alt="" />
           </a>
           <!--NavBar-->
           <div class="topnav">
@@ -30,37 +31,83 @@
           </div>
         </nav>
       </div>
-    </header> 
-<br>
-<br>
+    </header>
+    <br />
+    <br />
     <div class="container mt-5">
       <div class="row">
-        <div class="col-sm-4" id="colOne"> 
+        <div class="col-sm-4" id="colOne">
           <div class="colOne"></div>
-          <br>
-          <img class="belfast2" src="./Images/belfast.jpg" alt="City Break">
+          <br />
+          <img class="belfast2" src="./Images/belfast.jpg" alt="City Break" />
           <h3>City Breaks</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+          <p>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris...
+          </p>
         </div>
 
-        <div class="col-sm-4" id="colTwo"> 
-          <br>
-          <img class="cliff2" src="./Images/cliffs.jpg" alt="Outdoor Adventure">
+        <div class="col-sm-4" id="colTwo">
+          <br />
+          <img
+            class="cliff2"
+            src="./Images/cliffs.jpg"
+            alt="Outdoor Adventure"
+          />
           <h3>Outdoor Adventure</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+          <p>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris...
+          </p>
         </div>
 
-        <div class="col-sm-4" id="colThree"> 
-          <br>
-          <img class="bitofboth2" src="./Images/bitofboth.jpg" alt="Bit of both">
+        <div class="col-sm-4" id="colThree">
+          <br />
+          <img
+            class="bitofboth2"
+            src="./Images/bitofboth.jpg"
+            alt="Bit of both"
+          />
           <h3>Bit of Both</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+          <p>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris...
+          </p>
         </div>
       </div>
     </div>
+    <br />
+    <br />
+    <br />
 
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-content-brand">
+            <a href="indexTest.html" class="logo">
+              <img class="logo-image" src="./images/Logo.png" alt="" />
+            </a>
+            <div class="paragraph-footer">
+              test test test test test test test test test test test test
+            </div>
+          </div>
+          <div class="socialmedia-wrap">
+            <h4 class="footer-heading">Follow us</h4>
+            <div class="socialmedia">
+              <a href="#" class="sm-link">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+              <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+              <a href="#" class="sm-link">
+                <i class="fab fa-tripadvisor"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
