--- a/Account.html
+++ b/Account.html
@@ -110,7 +110,29 @@
           
         </div> 
       
-        <button class="accountButton" type="submit">Submit</button>
+        <button class="accountButton" >Submit</button>
+
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+  
+        <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title">Modal Heading</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+  
+        <!-- Modal body -->
+            <div class="modal-body">
+              Modal body..
+            </div>
+  
+        <!-- Modal footer -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
           <!-- <button type="button" id="accountButton" data-toggle="modal" data-target="#myModal">Submit</button> -->
         </form>
       </div>
@@ -171,8 +193,9 @@
       </div>
     </footer>
 
-    <script src="js/account.js"></script>
+    <!-- <script src="js/account.js"></script> -->
   </body>
+  <script src="js/account.js"></script>
 </html>
 <!-- <!DOCTYPE html>
 <html lang="en">
