--- a/StayStyles.html
+++ b/StayStyles.html
@@ -41,11 +41,18 @@
           <br />
           <img class="belfast2" src="./Images/belfast.jpg" alt="City Break" />
           <h3>City Breaks</h3>
-          <p>Belfast city breaks bring with them the promise of lively nightlife, historical and cultural gems, and a thriving food scene.</p>
           <p>
-            Enjoy the colourful Celtic nightlife among the lively crowds in Temple Bar
+            Belfast city breaks bring with them the promise of lively nightlife,
+            historical and cultural gems, and a thriving food scene.
           </p>
-          <p>Looking for a weekend away traversing the charming cobblestone streets of Galway?</p>
+          <p>
+            Enjoy the colourful Celtic nightlife among the lively crowds in
+            Temple Bar
+          </p>
+          <p>
+            Looking for a weekend away traversing the charming cobblestone
+            streets of Galway?
+          </p>
         </div>
 
         <div class="col-sm-4" id="colTwo">
@@ -57,8 +64,11 @@
           />
           <h3>Outdoor Adventure</h3>
           <p>Climb the highest mountain, Carrauntoohil, County Kerry</p>
-          <p>Go Skydiving in Edenderry, Co. Offaly </p>
-          <p>Delphi Resort is Ireland's leading adventure resort with a 4 star hotel, hostel, spa and up to 20 outdoor activities </p>
+          <p>Go Skydiving in Edenderry, Co. Offaly</p>
+          <p>
+            Delphi Resort is Ireland's leading adventure resort with a 4 star
+            hotel, hostel, spa and up to 20 outdoor activities
+          </p>
         </div>
 
         <div class="col-sm-4" id="colThree">
@@ -71,8 +81,10 @@
           <h3>Bit of Both</h3>
           <p>Enjoy the buzz in Galway city and the beautiful Salthill beach</p>
           <p>Cruise the River Shannon, Midlands</p>
-          <p>Kilkenny is one of Ireland's most cosmopolitan cities, with many festivals, eateries and creative people resulting in an electric atmosphere
-            and also explore the castle in the medieval town
+          <p>
+            Kilkenny is one of Ireland's most cosmopolitan cities, with many
+            festivals, eateries and creative people resulting in an electric
+            atmosphere and also explore the castle in the medieval town
           </p>
         </div>
       </div>
@@ -89,8 +101,9 @@
               <img class="logo-image" src="./images/Logo.png" alt="" />
             </a>
             <div class="paragraph-footer">
-             Contact us:   
-             <div>Email: HoliStayie@gmail.com     Telephone: 02830123467 </div>
+              <br />
+              Contact us:
+              <div>Email: HoliStayie@gmail.com Telephone: 02830123467</div>
             </div>
           </div>
           <div class="socialmedia-wrap">
