--- a/index.html
+++ b/index.html
@@ -196,22 +196,22 @@
         <a href="indexTest.html" class="logo">
           <img class="logo-image" src="./images/Logo.png" alt="">
         </a> 
-        <div class="paragraph-footer"> 
-          test test test test test test test test test test test test
-        </div>
+        <div class="paragraph-footer">
+          <br>
+          Contact us:   
+          <div>Email: HoliStayie@gmail.com     Telephone: 02830123467 </div>
+         </div>
       </div>
-      <!-- <div class="socialmedia-wrap"> -->
+      <div class="socialmedia-wrap">
         <h4 class="footer-heading">Follow us</h4>
-            <div class="socialmedia">
-              <a href="#" class="sm-link"> <i class="fab fa-facebook-square"></i> </a>
-              <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
-              <a href="#" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
-          
-           </div>
-        <!-- </div> -->
+          <div class="socialmedia">
+            <a href="#" class="sm-link"> <i class="fab fa-facebook-square"></i> </a>
+            <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+            <a href="#" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
+          </div>
       </div>
+    </div>
   </div>
-
 </footer>
 
 <script src="js/app.js"></script>
