--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -6,6 +6,7 @@
   <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/images.css" />
   <link rel="stylesheet" href="./css/featuredstays.css" />
