--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                 <i class="fas fa-star rating"></i>
             </div> 
             <p class="review-text">
-                'blah blah blah test review text'
+                'I was able to find the perfect "bit of both" weekend for my friend's hen party. We had a fantastic time in Dublin city. Highly recommend HoliStay IE!'
             </p>
             <a href="#" class="btn btn-gradient">See More
-                <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                <!-- <span class="dots"><i class="fas fa-ellipsis-h"></i></span> -->
             </a>
         </div>
     </div>
