--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/718184c482.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/images.css" />
@@ -182,9 +183,9 @@
             <p class="review-text">
                 'I was able to find the perfect "bit of both" weekend for my friend's hen party. We had a fantastic time in Dublin city. Highly recommend HoliStay IE!'
             </p>
-            <a href="#" class="btn btn-gradient">See More
-                <!-- <span class="dots"><i class="fas fa-ellipsis-h"></i></span> -->
-            </a>
+            <div class="smile-icon">
+              <i class="fa-regular fa-face-smile smile"></i>
+            </div>
         </div>
     </div>
   </section>
